--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1197,6 +1197,7 @@ aside {
   color: #fff;
   background-color: rgba(76,206,240, .9);
   padding: 0 50px;
+  line-height: 1.3em;
 }
 
 .headerUnderline{
@@ -1670,4 +1671,16 @@ aside {
   .menu-item-special a:hover{
     color: #4ccef0!important;
     background-color: #fff!important;
+  }
+
+  #privateClassesPage {
+    .rows{
+      margin-top: -40px;
+    }
+    @media only screen and (max-width: 767px){
+      .rows{
+        margin-top: 0;
+      }
+      }
+    
   }
