--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -327,10 +327,10 @@
             </div>
         </section>
 
-        <section>
+        <section id="privateClassesPage">
             <div class="container">
-                <div class="rows">
-                    <article style="padding: 0;">
+                <div  class="rows">
+                    <article>
                         <p>
                             Whatever your learning plan looks like, this year—remote schooling, 
                             learning pod, homeschooling, or perhaps a hybrid—our private online coding 
@@ -482,7 +482,7 @@
                             </div>
                         </div> 
                     </article>
-                    <aside style="padding: 0 0 0 25px;">
+                    <aside>
                         <div class="sideBanner">
                             <div class="sideBanner__down bgOrange">
                                 <h5 class="h5">
