--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1675,11 +1675,14 @@ aside {
 
   #privateClassesPage {
     .rows{
-      margin-top: -40px;
+      margin-top: -60px;
     }
     @media only screen and (max-width: 767px){
       .rows{
         margin-top: 0;
+        aside {
+          margin-top: -60px;
+        }
       }
       }
     
