--- a/css/style7.css
+++ b/css/style7.css
@@ -4738,6 +4738,7 @@ aside {
   }
   #privateClassesPage .rows aside {
     margin-top: -60px;
+    margin-bottom: 30px;
   }
 }
 /*# sourceMappingURL=style7.css.map */
