--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1682,6 +1682,7 @@ aside {
         margin-top: -60px;
         aside {
           margin-top: -60px;
+          margin-bottom: 30px;
         }
       }
       }
