robotics  page fix

--- a/css/style7.css
+++ b/css/style7.css
@@ -4730,6 +4730,7 @@ aside {
 
 #privateClassesPage .rows {
   margin-top: -40px;
+  margin-bottom: -40px;
 }
 
 @media only screen and (max-width: 767px) {
