--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1676,6 +1676,7 @@ aside {
   #privateClassesPage {
     .rows{
       margin-top: -40px;
+      margin-bottom: -40px;
     }
     @media only screen and (max-width: 767px){
       .rows{
