--- a/templates/page/privateclasses.html
+++ b/templates/page/privateclasses.html
@@ -287,8 +287,7 @@
 </div>
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section class="sectionheader"  style="
-        background-image:url(/CA/uploads/private-header.png); background-position: 60% 36%; background-size: auto, cover;padding:60px 0;">
+        <section  class="sectionheader privateClassesPage">
             <div class="container">
                 <div class="rows">
                     <article>
