--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1693,8 +1693,13 @@ aside {
   }
 
 .privateClassesPage{
-  background-image:url(/CA/uploads/private-header.png); 
+  background-image:url("/CA/uploads/private-header.png"); 
   background-position: 50% 35%; 
   background-size: cover;
   padding:60px 0;
+
+  @media only screen and (max-width: 767px){
+    background-image:url("/CA/uploads/private-classes-header.jpg"); 
+  }
+
 }
