--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -288,8 +288,7 @@
 </div>
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section class="sectionheader"  style="
-        background-image:url(/CA/uploads/friends-header.png); background-position: center,0 33%; background-size: auto, cover;padding:60px 0;">
+        <section class="sectionheader myFriendsPage">
             <div class="container">
                 <div class="rows">
                     <article>
@@ -346,7 +345,7 @@
             </div>
         </section>
 
-        <section>
+        <section id="myFriendsPage">
             <div class="container">
                 <div class="rows">
                     <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
