robotics  page fix

--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1703,23 +1703,23 @@ aside {
   }
 }
 
-#myFriendsPage {
-  .rows{
-    margin-top: -40px;
-    margin-bottom
+// #myFriendsPage {
+//   .rows{
+//     margin-top: -40px;
+//     margin-bottom
     
-    : -40px;
-  }
-  @media only screen and (max-width: 767px){
-    .rows{
-      margin-top: -60px;
-      aside {
-        margin-top: -60px;
-        margin-bottom: 60px;
-      }
-    }
-    }
-}
+//     : -40px;
+//   }
+//   @media only screen and (max-width: 767px){
+//     .rows{
+//       margin-top: -60px;
+//       aside {
+//         margin-top: -60px;
+//         margin-bottom: 60px;
+//       }
+//     }
+//     }
+// }
 
 .privateClassesPage{
   background-position: 50% 35%; 
