--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -345,7 +345,7 @@
             </div>
         </section>
 
-        <section id="myFriendsPage">
+        <section>
             <div class="container">
                 <div class="rows">
                     <img class="size-medium aligncenter divider" src="/CA/uploads/divider-1-300x23-1.png" alt="divider" width="300" height="auto"/>
