robotics  page fix

--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1703,7 +1703,7 @@ aside {
   }
 }
 
-.privateClassesPage{
+.myFriendsPage{
   background-position: 50% 35%; 
   background-size: cover;
   padding:100px 0;
