--- a/css/style7.css
+++ b/css/style7.css
@@ -4756,7 +4756,7 @@ aside {
   }
 }
 
-.privateClassesPage {
+.myFriendsPage {
   background-position: 50% 35%;
   background-size: cover;
   padding: 100px 0;
