--- a/templates/page/onlinenew.html
+++ b/templates/page/onlinenew.html
@@ -322,10 +322,10 @@
                 </div>
             </div>
         </section>
-        <section>
+        <section id="onlinePage">
             <div class="container">
                 <div class="rows">
-                    <article style="padding: 0 0 30px;">
+                    <article>
                         <p>
                             In this time of education uncertainty, CodeAdvantage provides a vibrant learning path where children look forward to their classes, opt into extra enrichment activities, and create exciting new things with code!
                         </p>
@@ -441,7 +441,7 @@
                         </div>
 
                     </article>
-                    <aside  style="padding: 0 0 0 25px">
+                    <aside>
                         <div class="sideBanner">
                             <div class="sideBanner__down bgOrange">
                                 <h5 class="h5">
