--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1709,3 +1709,23 @@ aside {
   padding:100px 0;
   background-image:url("/CA/uploads/friends-header.png");
 }
+
+
+#onlinePage{
+  .rows{
+    margin-top: -40px;
+    margin-bottom
+    
+    : -40px;
+  }
+  @media only screen and (max-width: 767px){
+    .rows{
+      margin-top: -60px;
+      aside {
+        margin-top: -60px;
+        margin-bottom: 60px;
+      }
+    }
+    }
+  
+}
