--- a/css/style7.css
+++ b/css/style7.css
@@ -4562,7 +4562,7 @@ aside {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   left: 50%;
-  width: 500px;
+  width: 100%;
 }
 
 .blockStepWrapper .blockPriceLine {
