robotics  page fix

--- a/css/style7.css
+++ b/css/style7.css
@@ -4217,7 +4217,7 @@ aside {
   display: inline-block;
   color: #fff;
   background-color: rgba(76, 206, 240, 0.9);
-  padding: 0 50px;
+  padding: 5px 50px;
   line-height: 1.3em;
 }
 
