robotics  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -288,11 +288,11 @@
 </div>
 <div class="theme-page">
     <div class="theme-page-content theme-clear-fix">
-        <section class="sectionheader myFriendsPage">
+        <section id="onlinePageHeader" class="sectionheader myFriendsPage">
             <div class="container">
                 <div class="rows">
                     <article>
-                        <h1>Me and My Friends</h1>
+                        <h1 class="h1">Me and My Friends</h1>
                     </article>
                 </div>
             </div>
