--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1708,6 +1708,10 @@ aside {
   background-size: cover;
   padding:100px 0;
   background-image:url("/CA/uploads/friends-header.png");
+
+  .h1{
+    margin-top: 35px;
+  }
 }
 
 
