robotics  page fix

--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1708,9 +1708,9 @@ aside {
   background-size: cover;
   padding:100px 0;
   background-image:url("/CA/uploads/friends-header.png");
-
+  height: 400px;
   .h1{
-    margin-top: 35px;
+    margin-top: 170px;
   }
 }
 
