--- a/css/style7.css
+++ b/css/style7.css
@@ -4761,10 +4761,11 @@ aside {
   background-size: cover;
   padding: 100px 0;
   background-image: url("/CA/uploads/friends-header.png");
+  height: 400px;
 }
 
 .myFriendsPage .h1 {
-  margin-top: 35px;
+  margin-top: 170px;
 }
 
 #onlinePage .rows {
