--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1718,6 +1718,7 @@ aside {
 #onlinePage{
   .rows{
     margin-top: -40px;
+    margin-bottom: 40px;
   }
   @media only screen and (max-width: 767px){
     .rows{
