online  page fix

--- a/templates/page/myfriend.html
+++ b/templates/page/myfriend.html
@@ -368,10 +368,10 @@
                             </li>
                         </ul>
                         <h4 class="h4">
-                            Pricing for My Friends Online
+                            Pricing for <i>My Friends </i> Online
                         </h4>
                         <p>
-                            When you build a class with seven learners, our My Friends Online offering is only a couple dollars more per hour than our scheduled class offerings. The total cost for ten hours of small group instruction is $1,715, and the cost is split among the learners in the online learning pod. Here's how that cost breaks down per learner with 7, 6, and 5 total learners in the coding supplement class.
+                            When you build a class with seven learners, our <i>My Friends</i>  Online offering is only a couple dollars more per hour than our scheduled class offerings. The total cost for ten hours of small group instruction is $1,715, and the cost is split among the learners in the online learning pod. Here's how that cost breaks down per learner with 7, 6, and 5 total learners in the coding supplement class.
                         </p>
                         <div class="blockPriceWrapper textCenter">
                             <p>
@@ -580,7 +580,7 @@
                 <div class="rows">
                     <article>
                         <h4 class="h4">
-                            How to Launch a My Friends Online Class!
+                            How to Launch a <i>My Friends</i>  Online Class!
                         </h4>
                         <div class="blockStepWrapper">
                             <div class="blockPrice">
