online  page fix

--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1708,7 +1708,7 @@ aside {
   background-size: cover;
   padding:100px 0;
   background-image:url("/CA/uploads/friends-header.png");
-  height: 400px;
+  height: 400px!important;
   .h1{
     margin-top: 170px;
   }
