--- a/css/style7.css
+++ b/css/style7.css
@@ -4761,7 +4761,7 @@ aside {
   background-size: cover;
   padding: 100px 0;
   background-image: url("/CA/uploads/friends-header.png");
-  height: 400px;
+  height: 400px !important;
 }
 
 .myFriendsPage .h1 {
