--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1645,7 +1645,7 @@ aside {
     text-decoration: underline;
   }
 
-  .questionLink a:before {
+  .questionLink:before {
     content: "·";
     position: absolute;
     left: 0;
