--- a/templates/page/FAQ.html
+++ b/templates/page/FAQ.html
@@ -301,7 +301,7 @@
         <section>
             <div class="headerUnderline">
                 <p>
-                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  SMALL GROUP CLASSES  |   35 COURSES  FOR AGES 6 - 13!
+                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  INSTRUCTION  |   35 COURSES  FOR AGES 6 - 13!
                 </p>
             </div>
         </section>
