--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1635,11 +1635,11 @@ aside {
 
   .questionLink {
     position: relative;
+    padding-left: 20px;
   }
   .questionLink a{
     color: #707070;
     text-decoration: none;
-    margin-left: 15px;
   }
   .questionLink a:hover {
     text-decoration: underline;
