online  page fix

--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -71,7 +71,6 @@
 <div class="submenu">
     <div class="pb-main pb-clear-fix">
         <div class="submenuWrapper">
-            <a href="#" class="submenuLink">schools</a>
             <a href="/portal" class="portalBtn">Portal Log In</a>
         </div>
     </div>
@@ -143,31 +142,8 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="#"><span></span> <i>My Friends </i> Online</a>
                 </li>
-                <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children sf-mega-enable-0  ">
-                    <a href="/school-programs">After School</a>
-                    <ul>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes"><span></span>Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades"><span></span>Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age"><span></span>Classes by Age</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts"><span></span>Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics"><span></span>Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding"><span></span>Coding</a>
-                        </li>
-                    </ul>
-                </li> -->
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
-                    <a href="#"><span></span> 1:1 Tutoring</a>
+                    <a href="#"><span></span> Private Coding</a>
                 </li>
 
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
@@ -204,7 +180,7 @@
                 <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  ">
                     <a href="/contact"><span></span>Contact</a>
                 </li>
-                <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0 menu-item-special">
+                <li class=" menu-item menu-item-type-post_type menu-item-object-page sf-mega-enable-0  menu-item-special">
                     <a href="#"><span></span>Free Trial!</a>
                 </li>
             </ul>
@@ -261,35 +237,11 @@
                          <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
                             <a href="/special-offers">-- Special Offers</a>
                         </li>
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/private-classes">Private Classes</a>
-                        </li> -->
-                        <!-- <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span>After School</a>
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page">
+                            <a href="/school-programs"> <i>My Friends</i>  Online</a>
                         </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page ">
-                            <a href="/classes">-- Classes</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/grades">-- Classes by Grade</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/age">-- Classes by Age</a>
-                        </li>                       
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/tech-and-arts">-- Technology and Arts Exploration</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/robotics">-- Robotics</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  ">
-                            <a href="/classes/coding">-- Coding</a>
-                        </li> -->
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span> <i>My Friends</i>  Online</a>
-                        </li>
-                        <li class=" menu-item menu-item-type-post_type menu-item-object-page  menu-item-has-children">
-                            <a href="/school-programs"><span></span> 1:1 Tutoring</a>
+                        <li class=" menu-item menu-item-type-post_type menu-item-object-page">
+                            <a href="/school-programs"> Private Coding</a>
                         </li>
                         <li class=" menu-item menu-item-type-post_type menu-item-object-page menu-item-has-children">
                             <a href="/about">About</a>
@@ -323,7 +275,6 @@
                 </div>
             </div>
         </div>
-
     </div>
 
 </div>
@@ -351,7 +302,7 @@
         <section>
             <div class="headerUnderline">
                 <p>
-                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  SMALL GROUP CLASSES  |   35 COURSES  FOR AGES 6 - 13!
+                    10,000+ KIDS HAVE LEARNED TO CODE WITH US  |  40+ ROCKSTAR INSTRUCTORS  |  100% LIVE  INSTRUCTION  |   35 COURSES  FOR AGES 6 - 13!
                 </p>
             </div>
         </section>
