online  page fix

--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -28,6 +28,7 @@
     <link rel="stylesheet" href="/CA/css/tooltipster/css/tooltipster.bundle.css">
     <link rel="stylesheet" href="/CA/css/tooltipster/css/plugins/tooltipster/sideTip/themes/tooltipster-sideTip-shadow.min.css">
     <link rel="stylesheet" href="/CA/css/styles.css" type='text/css'>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" type='text/css'>
 
 
     <!--n2css-->
@@ -347,7 +348,7 @@
                                     <tbody>
                                         <tr width="100%">
                                             <td> <strong>Scratch Jr</strong> </td>
-                                            <td class="yes">yes</td>
+                                            <td class="yes"><i class="fas fa-check-circle"></i></td>
                                             <td class="yes">yes</td>
                                             <td class="yes">yes</td>
                                             <td class="yes">yes</td>
@@ -355,7 +356,7 @@
                                         <tr>
                                             <td> <strong>Kodu</strong> </td>
                                             <td class="yes">yes</td>
-                                            <td class="no">no</td>
+                                            <td class="no"><i class="fas fa-times-circle"></i></td>
                                             <td class="no">no</td>
                                             <td class="no">no</td>
                                         </tr>
