online  page fix

--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -221,10 +221,10 @@
         cursor: pointer;
     }        
     .yes{
-        color: green!important;
+        color: #34a853!important;
     }
     .no{
-        color: red!important;
+        color:#ea4335!important;
     }
 }
 ////////////////////////////////////////////////
