--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -348,58 +348,58 @@
                                     <tbody>
                                         <tr width="100%">
                                             <td> <strong>Scratch Jr</strong> </td>
-                                            <td class="yes"><i class="fas fa-check-circle"></i></td>
-                                            <td class="yes">yes</td>
-                                            <td class="yes">yes</td>
-                                            <td class="yes">yes</td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         </tr>
                                         <tr>
                                             <td> <strong>Kodu</strong> </td>
-                                            <td class="yes">yes</td>
-                                            <td class="no"><i class="fas fa-times-circle"></i></td>
-                                            <td class="no">no</td>
-                                            <td class="no">no</td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
+                                            <td class="no"><i class="fa fa-times-circle"></i></td>
                                         </tr>
                                         <tr>
                                             <td> <strong>Scratch</strong> </td>
-                                            <td class="yes">yes</td>
-                                            <td class="yes">yes</td>
-                                            <td class="yes">yes</td>
-                                            <td class="yes">yes</td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                            <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         </tr>
                                     <tr>
                                         <td> <strong>Roblox Code</strong> </td>
-                                        <td class="yes">yes</td>
-                                        <td class="yes">yes</td>
-                                        <td class="no">no</td>
-                                        <td class="no">no</td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
                                     </tr>
                                     <tr>
                                         <td><strong>Minecraft Club</strong> </td>
-                                        <td class="yes">yes</td>
-                                        <td class="yes">yes</td>
-                                        <td class="no">no</td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
                                         <td class="yes">yes</td>
                                     </tr>
                                     <tr>
                                         <td><strong> Minecraft Mods</strong></td>
-                                        <td class="yes">yes</td>
-                                        <td class="yes">yes</td>
-                                        <td class="no">no</td>
-                                        <td class="no">no</td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
+                                        <td class="no"><i class="fa fa-times-circle"></i></td>
                                     </tr>
                                     <td> <strong>Web Development</strong> </td>
-                                    <td class="yes">yes</td>
-                                    <td class="yes">yes</td>
-                                    <td class="yes">yes</td>
-                                    <td class="no">no</td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="no"><i class="fa fa-times-circle"></i></td>
                                 </tr>
                                 <tr>
                                     <td> <strong>Python</strong> </td>
-                                    <td class="yes">yes</td>
-                                    <td class="yes">yes</td>
-                                    <td class="yes">yes</td>
-                                    <td class="no">no</td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="yes"><i class="fa fa-check-circle"></i></td>
+                                    <td class="no"><i class="fa fa-times-circle"></i></td>
                                 </tr>
                                     </tbody>
                                 </table>
