--- a/css/tableFilter.css
+++ b/css/tableFilter.css
@@ -232,11 +232,11 @@
 }
 
 #techTable .yes {
-  color: green !important;
+  color: #34a853 !important;
 }
 
 #techTable .no {
-  color: red !important;
+  color: #ea4335 !important;
 }
 
 .filterTable {
