--- a/css/tableFilter.scss
+++ b/css/tableFilter.scss
@@ -222,9 +222,17 @@
     }        
     .yes{
         color: #34a853!important;
+        font-size: 1.8em;
+        @media only screen and (max-width: 768px) and (min-width: 0px) {
+            font-size: 1.3em;
+          }
     }
     .no{
         color:#ea4335!important;
+        font-size: 1.8em;
+        @media only screen and (max-width: 768px) and (min-width: 0px) {
+            font-size: 1.3em;
+          }
     }
 }
 ////////////////////////////////////////////////
