online  page fix

--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -379,7 +379,7 @@
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         <td class="yes"><i class="fa fa-check-circle"></i></td>
                                         <td class="no"><i class="fa fa-times-circle"></i></td>
-                                        <td class="yes">yes</td>
+                                        <td class="yes"><i class="fa fa-check-circle"></i></td>
                                     </tr>
                                     <tr>
                                         <td><strong> Minecraft Mods</strong></td>
