--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -406,6 +406,39 @@
                             </div>
                         </div>
                     </article>
+                    <aside>
+                        <div class="sideBanner">
+                            <div class="sideBanner__down">
+                                <h5 class="h5">
+                                    <strong>
+                                        Other questions: 
+                                    </strong>
+                                </h5>
+                                <ul>
+                                    <li>
+                                        <a href="#">How are your classes taught?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Do you have LIVE instruction?</a>
+                                        
+                                    </li>
+                                    <li>
+                                        <a href="#">What are the technical requirements? <br>
+                                            What type of computer does my child need to take class?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Can my child use an iPad/Tablet or Chromebook for class?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">How do I use the portal?</a>
+                                    </li>
+                                    <li>
+                                        <a href="#">Do you offer sibling discounts?</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </div>
+                    </aside>
                 </div>
             </div>
         </section>
