--- a/css/style7.scss
+++ b/css/style7.scss
@@ -1065,6 +1065,10 @@ aside {
   padding: 15px 20px;
   margin-bottom: 15px;
 }
+
+.sideBanner .sideBanner__down a{
+  color: white;
+}
 .sideBanner  h2,
 .sideBanner  h3,
 .sideBanner  h4,
