--- a/templates/page/quofaq.html
+++ b/templates/page/quofaq.html
@@ -310,7 +310,7 @@
 
         <section>
             <div class="container">
-                <div class="row">
+                <div class="rows">
                     <article>
                         <h3 class="h3 mb-middle mt-middle">
                             What are the technical requirements? What type of computer does my child need to take class?
